# pysampler

./: CITATION  README.md  README.rst  pysampler.py  setup.cfg
docs/: README_copy.rst  conf.py  examples.rst  index.rst  reference.rst  tutorial.rst
docs/_templates/: link.html
examples/: BBdata.ipynb  halo_sampler.ipynb  schechter_data.ipynb
pysampler/: __init__.py  generate.py  pysampler.py
