[metadata]
name = pysampler
version = attr: pysampler.__version__
author = Lucia Fonseca de la Bella
author_email = lucia.fonseca-de-la-bella@port.ac.uk
description = histogram generator
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE.txt
url = https://github.com/Lucia-Fonseca/pysampler.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy

[options.extras_require]
docs =
    sphinxcontrib.bibtex
